Fixing bug where adding too many posts would overflow the page by using min-height instead of height
Fixing bug where adding too many posts would overflow the page by using min-height instead of height

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,4 @@
 .container {
     background-color: black;
-    height: 100%;
+    min-height: 100%;
 }
