--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -9,8 +9,10 @@
 * {
   margin: 0;
 }
-body,
-html,
+
+body,html {
+  height: 100%;
+}
 #root {
   height: 100%;
   font-family: Noto Sans, Arial, sans-serif;
